--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@
         <h2>Contact & Location</h2>
         <p class="lead">Visit karein ya WhatsApp karein – hum madad ke liye hai.</p>
         <ul style="list-style:none;padding:0;margin:0 0 16px;color:var(--muted)">
-          <li><strong>Address:</strong> Shop No. X, Main Road, Your City</li>
-          <li><strong>Phone:</strong> <a href="tel:+91XXXXXXXXXX">+91 XXXXX XXXXX</a></li>
+          <li><strong>Address:</strong> Shop No. X, Main Road</li>
+          <li><strong>Phone:</strong> <a href="tel:+917004731451">+91 7004731451</a></li>
           <li><strong>WhatsApp:</strong> <a id="waText" href="#">Chat Now</a></li>
           <li><strong>Hours:</strong> Mon–Sat, 8 AM – 8 PM</li>
         </ul>
@@ -520,4 +520,5 @@ function toggleMenu() {
 
 </body>
 </html>
+
 
