--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
           </div>
           <div style="display:flex;gap:10px;flex-wrap:wrap">
             <button class="btn" type="submit">Book on WhatsApp</button>
-            <a class="btn outline" href="tel:+91XXXXXXXXXX">Call Now</a>
+            <a class="btn outline" href="tel:+917004731451">Call Now</a>
           </div>
           <div id="formNote" style="font-size:13px;color:var(--soft)"></div>
         </form>
@@ -520,5 +520,6 @@ function toggleMenu() {
 
 </body>
 </html>
+
 
 
