--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     width: 100%;
   }
   section {
-    padding:40px 0 0 0;
+    padding:40px 0;
   }
 }
 
@@ -123,7 +123,7 @@
 
     /* Sections */
     section{scroll-margin-top:90px}
-    .section{padding:40px 0}
+    .section{padding:20px 0}
     .section h2{font-size:clamp(22px,4.5vw,34px);margin:0 0 10px}
     .section p.lead{color:var(--muted);margin:0 0 16px}
 
@@ -523,6 +523,7 @@ function toggleMenu() {
 
 </body>
 </html>
+
 
 
 
